// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`props digits test 1`] = `
<div>
  <div
    class="nut-price nut-price-primary "
  >
    <div
      class="nut-price-symbol nut-price-symbol-normal"
    >
      ¥
    </div>
    <div
      class="nut-price-integer nut-price-integer-normal "
    >
      15213
    </div>
    <div
      class="nut-price-decimal nut-price-decimal-normal "
    >
      .
    </div>
    <div
      class="nut-price-decimal nut-price-decimal-normal "
    >
      122
    </div>
  </div>
</div>
`;

exports[`props symbol test 1`] = `
<div>
  <div
    class="nut-price nut-price-primary "
  >
    <div
      class="nut-price-symbol nut-price-symbol-normal"
    >
      $
    </div>
    <div
      class="nut-price-integer nut-price-integer-normal "
    >
      10010
    </div>
    <div
      class="nut-price-decimal nut-price-decimal-normal "
    >
      .
    </div>
    <div
      class="nut-price-decimal nut-price-decimal-normal "
    >
      00
    </div>
  </div>
</div>
`;

exports[`props test 1`] = `
<div>
  <div
    class="nut-price nut-price-primary "
  >
    <div
      class="nut-price-integer nut-price-integer-normal "
    >
      1,010
    </div>
    <div
      class="nut-price-decimal nut-price-decimal-normal "
    >
      .
    </div>
    <div
      class="nut-price-decimal nut-price-decimal-normal "
    >
      00
    </div>
  </div>
</div>
`;

exports[`props test 2`] = `
<div>
  <div
    class="nut-price nut-price-primary "
  >
    <div
      class="nut-price-integer nut-price-integer-normal "
    >
      1,010
    </div>
    <div
      class="nut-price-decimal nut-price-decimal-normal "
    >
      .
    </div>
    <div
      class="nut-price-decimal nut-price-decimal-normal "
    >
      00
    </div>
  </div>
</div>
`;

exports[`props test 3`] = `
<div>
  <div
    class="nut-price nut-price-primary "
  >
    <div
      class="nut-price-integer nut-price-integer-normal "
    >
      1,010
    </div>
    <div
      class="nut-price-decimal nut-price-decimal-normal "
    >
      .
    </div>
    <div
      class="nut-price-decimal nut-price-decimal-normal "
    >
      00
    </div>
  </div>
</div>
`;

exports[`props thousands test 1`] = `
<div>
  <div
    class="nut-price nut-price-primary "
  >
    <div
      class="nut-price-symbol nut-price-symbol-normal"
    >
      $
    </div>
    <div
      class="nut-price-integer nut-price-integer-normal "
    >
      10010
    </div>
    <div
      class="nut-price-decimal nut-price-decimal-normal "
    >
      .
    </div>
    <div
      class="nut-price-decimal nut-price-decimal-normal "
    >
      01
    </div>
  </div>
</div>
`;

exports[`props type 1`] = `
<div>
  <div
    class="nut-price nut-price-primary "
  >
    <div
      class="nut-price-integer nut-price-integer-normal "
    >
      1,010
    </div>
    <div
      class="nut-price-decimal nut-price-decimal-normal "
    >
      .
    </div>
    <div
      class="nut-price-decimal nut-price-decimal-normal "
    >
      00
    </div>
  </div>
</div>
`;
